<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/si"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="392dp"
        android:layout_height="658dp"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="337dp"
            android:layout_height="288dp"
            android:layout_gravity="center"
            android:background="@drawable/masiformini"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/TextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="Himpunan Masiswa Sistem Informasi"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/View1"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="#448AFF" />

        <TextView
            android:id="@+id/TextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dip"
            android:text="@string/welcome_login_below"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:drawableLeft="@android:drawable/sym_action_email"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:drawableLeft="@android:drawable/ic_lock_lock"
            android:hint="@string/password"
            android:singleLine="true"
            android:password="true"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="359dp"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="#448AFF"
            android:text="@string/login"
            android:textColor="#fff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="358dp"
            android:layout_height="43dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="#9FFFFFFF"
            android:text="@string/register"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>